syntax = "proto3";
package tendermint.spn.mint;

option go_package = "github.com/tendermint/spn/x/mint/types";

import "gogoproto/gogo.proto";

// Minter represents the minting state.
message Minter {
  // current annual inflation rate
  string inflation = 1
      [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = false];
  // current annual expected provisions
  string annual_provisions = 2 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable)   = false
  ];
}

message WeightedAddress {
  string address = 1;
  string weight = 2 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
}

message DistributionProportions {
  // staking defines the proportion of the minted minted_denom that is to be
  // allocated as staking rewards.
  string staking = 1 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
  // incentives defines the proportion of the minted minted_denom that is
  // to be allocated as incentives.
  string incentives = 2 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
  // development_fund defines the proportion of the minted minted_denom that is
  // to be allocated for development funding.
  string development_fund = 3 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
  // community_pool defines the proportion of the minted minted_denom that is
  // to be allocated to the community pool.
  string community_pool = 4 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
}

// Params holds parameters for the mint module.
message Params {
  option (gogoproto.goproto_stringer) = false;

  // type of coin to mint
  string mint_denom = 1;
  // maximum annual change in inflation rate
  string inflation_rate_change = 2 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable)   = false
  ];
  // maximum inflation rate
  string inflation_max = 3 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable)   = false
  ];
  // minimum inflation rate
  string inflation_min = 4 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable)   = false
  ];
  // goal of percent bonded atoms
  string goal_bonded = 5 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable)   = false
  ];
  // expected blocks per year
  uint64 blocks_per_year = 6;
  // distribution_proportions defines the proportion of the minted denom
  DistributionProportions distribution_proportions = 7
  [ (gogoproto.nullable) = false ];

  // address to receive developer rewards
  repeated WeightedAddress development_fund_recipients = 8 [
    (gogoproto.nullable) = false
  ];
}
